--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
 title: Lilith Throne mods by Phobos
+description: This is a [Google Drive](https://drive.google.com/drive/folders/1n7KAw_ACSoOeiUhKhrPPfzm_V6dIiIy7) mirror.
