--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-tactile
 title: Lilith Throne mods
 description: by Phobos
+google-site-verification: google73dd8c91520c516f.html
